--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -33,6 +33,7 @@ a, a:hover, a:focus {
   margin: 0px;
   padding: 0px;
   text-decoration: none;
+  color: #000;
 }
 
 img {
@@ -48,7 +49,8 @@ button, .btn {
 /* common setting */
 
 :root {
-  --lblack: ;
+  --bggray: #F5F5F5;
+  --lblack: #131313;
   --dwhite: #D4D4D4;;
 };
 
@@ -62,9 +64,15 @@ button, .btn {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px rgba(0, 0, 0, .12);
 }
 
+.shadow-box-light {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+
 /* navbar */
 header {
   width: 100%;
+  height: 30px;
   margin-bottom: 30px;
 }
 #nav {
@@ -150,6 +158,7 @@ header {
   top: 30px;
   transform: translateY(-100%);
   transition: .2s;
+  z-index: 200;
 }
 
 #lower-nav .container {
@@ -172,4 +181,43 @@ header {
   color: var(--red);
   font-size: 25px;
   cursor: pointer;
+}
+
+/* flash */
+
+.alert-row {
+  width: 100%;
+}
+
+/* footer */
+
+footer {
+  margin-top: 40px;
+  height: 80px;
+  text-align: center;
+  display: grid;
+  align-items: center;
+  color: var(--gray);
+}
+
+/* go top btn */
+
+#go-top-btn {
+  height: 40px; 
+  width: 30px;
+  background: rgba(0, 0, 0, 0.05);
+  position: fixed;
+  right: 20px;
+  bottom: 15px;
+  font-size: 20px;
+  text-align: center;
+  cursor: pointer;
+}
+
+#go-top-btn:hover {
+  background: #FFF;
+}
+
+#go-top-btn p {
+  font-size: 8px;
 }
