--- a/app/views/khroma/index.html.erb
+++ b/app/views/khroma/index.html.erb
@@ -1,33 +1,41 @@
-<section id='match'></section>
-<div class="container">
-  <h2>khroma match搜尋大法</h2>
-  <div class="match-choice-panel">
-    <!-- 使用者先選擇男女 -->
-    <h3>Gender choice</h3>
-    <div id="gender-choice">
-      <%= collection_select(:gender, :gender_id, Gender.all, :id, :name, prompt: 'choose gender') %>
-    </div>
-    <!-- 使用者於此區選擇上身type 與 顏色hue -->
-    <div id="up-choice-panel">
-      <h3>上身 choice</h3>
-      <span id="up-type-choice">
-      </span>
-      <span id="up-hue-choice">
-        <%= collection_select(:hue_level, :id, HueLevel.all , :id, :name, prompt: 'choose color') %>
-      </span>
-    </div>
-    <div id="down-choice-panel">
-      <h3>下身 choice</h3>
-      <span id="down-type-choice"></span>
-      <span id="down-hue-choice">
-        <%= collection_select(:hue_level, :id, HueLevel.all , :id, :name, prompt: 'choose color') %>
-      </span>
-      </span>
-    </div>
+<section id='match'>
+  <div class="container">
+    <div class="match-choice-panel">
+      <div class="left-match-col">
+        <div id="gender-choice">
+          <div class="btn-group btn-group-toggle" data-toggle="buttons">
+            <label class="btn btn-secondary active">
+              <input value="1" type="radio" name="options" id="option1" autocomplete="off" checked> 男
+            </label>
+            <label class="btn btn-secondary">
+              <input value="2" type="radio" name="options" id="option2" autocomplete="off"> 女
+            </label>
+          </div>
+        </div>
+        <div id="up-choice-panel">
+          <span id="up-type-choice">
+            <%= grouped_collection_select(:type, :type_id,  @categories_init[0], :types, :name, :id, :name, {prompt: '選擇種類'}, {class: "custom-select col-md-5 col-xs-12"}) %>
+          </span>
+          <span id="up-hue-choice">
+            <%= collection_select(:hue_level, :id, HueLevel.all , :id, :name, {prompt: '選擇顏色'}, {class: "custom-select col-md-6 col-xs-12"}) %>
+          </span>
+        </div>
+        <div id="down-choice-panel">
+          <span id="down-type-choice">
+            <%= grouped_collection_select(:type, :type_id,  @categories_init[1], :types, :name, :id, :name, {prompt: '選擇種類'}, {class: "custom-select col-md-5 col-xs-12"}) %>
+          </span>
+          <span id="down-hue-choice">
+            <%= collection_select(:hue_level, :id, HueLevel.all , :id, :name, {prompt: '選擇顏色'}, {class: "custom-select col-md-6 col-xs-12"}) %>
+          </span>
+        </div>
+      </div>
+      <div id="match-btn" class="shadow-box">
+        <%= image_tag('hue-ring-500x.png', class: "match-btn-img") %>
+        <div class="match-btn-word">Khroma</div>
+      </div>
+    </div>    
   </div>
-  <br />
-  <button id="match-btn">Khroma Match</button>
-</div>
+</section>
 <section id="result">
   <div class="container">
     <hr />
