--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,10 @@
               <% if current_user %>
                 <li>會員中心</li>
                 <li><%= link_to '登出', destroy_user_session_path, method: :delete %></li>
+                
               <% else %>
                 <li><%= link_to '會員登入', user_session_path, method: :post %></li>
+
               <% end %>
             </ul>
           </div> 
@@ -37,5 +39,6 @@
       </div>
     </header>
     <%= yield %>
+    <li><%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %></li>
   </body>
 </html>
