--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -13,7 +13,7 @@
 </div>
 <div class="container">
   <div class="type-styles-panel">
-    <%= render partial: "shared/recommend", locals: {objs: @types} %>
+    <%= render partial: "shared/recommend", locals: {types: @types} %>
   </div>
 </div>
 
