--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -9,3 +9,14 @@
 }
 
 
+.container > .styles-panel .style-item {
+  box-shadow: 1px 1px 0 0 rgba(0,0,0,.1);
+}
+
+#order-selection {
+  margin-bottom: 20px;
+}
+
+#order-selection > .btn-group {
+  float: right;
+}
