--- a/app/views/khroma/index.html.erb
+++ b/app/views/khroma/index.html.erb
@@ -29,10 +29,7 @@
           </span>
         </div>
       </div>
-      <div id="match-btn" class="shadow-box">
-        <%= image_tag('hue-ring-500x.png', class: "match-btn-img") %>
-        <div class="match-btn-word">Khroma</div>
-      </div>
+      <%= render partial: "shared/match_btn" %>
     </div>    
   </div>
 </section>
