--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -71,7 +71,7 @@ button, .btn {
 }
 
 .shadow-box-light {
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  box-shadow: 1px 1px 0 0 rgba(0,0,0,.1);
 }
 
 
