--- a/app/views/shared/_product_lg.html.erb
+++ b/app/views/shared/_product_lg.html.erb
@@ -1,18 +1,22 @@
 <div class="previous-product-btn">
-  <i class="fa fa-caret-left"></i>
+  <%= link_to change_style_previous_product_path(product.id), remote: true do %>
+    <i class="fa fa-caret-left"></i>
+  <% end %>
 </div>
 <div class="product-img shadow-box-light">
   <%= image_tag(product.image) %>
 </div>
 <div class="next-product-btn">
-  <i class="fa fa-caret-right"></i>
+  <%= link_to change_style_next_product_path(product.id), remote: true do %>
+    <i class="fa fa-caret-right"></i>
+  <% end %>
 </div>
 <div class="product-info-lg shadow-box-light">
-  <div class="product-title">
+  <div class="product-title text-center">
     <%= product.name %>
   </div>
-  <div class="product-color-panel">
-    選擇顏色：
+  <div class="row-title">選擇顏色</div>
+  <div class="product-color-panel">  
     <% product.style.colors.each do |color| %>
       <% if product.color.id == color.id %>
         <% css_class = "color-locked" %>
@@ -22,17 +26,18 @@
       <% end %>
     <% end %>
   </div>
-    <div class="product-brand">
-      品牌：
-      <% if product.brand == "lativ" %>
-        <%= image_tag('lativ-logo.png', class: "product-brand-img") %>
-      <% elsif product.brand == "uniqlo" %>
-        <%= image_tag('uniqlo-logo.png', class: "product-brand-img") %>
-      <% end %>
-    </div>
-    <div class="product-price">
-      價格： NT$<%= product.price.round %>
-    </div>
+  <div class="row-title">品牌</div>
+  <div class="product-brand">
+    
+    <% if product.brand == "lativ" %>
+      <%= image_tag('lativ-logo.png', class: "product-brand-img") %>
+    <% elsif product.brand == "uniqlo" %>
+      <%= image_tag('uniqlo-logo.png', class: "product-brand-img") %>
+    <% end %>
+  </div>
+  <div class="product-price">
+    NT$<%= product.price.round %>
+  </div>
   <div class="product-link">
     <a href="<%= product.link %>" target="_blank">
       <button class="btn btn-warning">去購買</button>
