--- a/app/views/styles/price_order_asc.html.erb
+++ b/app/views/styles/price_order_asc.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div id="order-selection" class="clearfix">
     <div class="btn-group" role="group">
-      <button class="btn btn-sm btn-outline-secondary">
+      <button class="btn btn-sm btn-primary">
         <%= link_to "價錢由低到高" , price_order_asc_type_styles_path(@type)%>
       </button>
       <button class="btn btn-sm btn-outline-secondary">
@@ -16,4 +16,3 @@
     <%= render partial: "shared/product_sm", collection: @styles, as: :style %>
   </div>
 </div>
-
