--- a/app/assets/stylesheets/types.css
+++ b/app/assets/stylesheets/types.css
@@ -1,18 +1,20 @@
 .type-pills-panel {
   background: #FFF;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-  height: 60px;
-  justify-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  min-height: 60px;
 }
 
 .type-pill {
   width: 100%;
+  min-height: 50px;
+  min-width: 80px;
   margin-top: 10px;
   font-size: 14px;
   font-weight: 600;
   text-align: center;
   cursor: pointer;
+  flex: 1;
 }
 
 .angle-down {
@@ -28,7 +30,7 @@
   padding-top: 10px;
   padding-bottom: 10px; 
   display: grid;
-  grid-template-columns: 1fr 100px;
+  grid-template-columns: 1fr auto;
   align-items: center;
 }
 
