--- a/app/views/shared/_product_sm.html.erb
+++ b/app/views/shared/_product_sm.html.erb
@@ -13,7 +13,7 @@
       <% end %>
     </div>
     <div class="product-title">
-      <%= style.products.first.name %>
+      <%= style.name %>
     </div>
     <div class="product-brand-price-row">
       <div class="product-brand">
@@ -34,3 +34,4 @@
     </div>
   </div>
 </div>
+<hr />
