--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -61,8 +61,7 @@ button, .btn {
 };
 
 .container {
-  width: 85%;
-  max-width: 1170px;
+  width: 1100px;
   margin: 0 auto;
 }
 
@@ -80,10 +79,10 @@ header {
   width: 100%;
   height: 30px;
 }
+
 #nav {
   height: 30px;
   width: 100%;
-  overflow: hidden;
   background: black;
   position: fixed;
   top: 0;
@@ -92,24 +91,28 @@ header {
 
 #upper-nav {
   display: grid;
-  grid-template-columns: 100px 1fr 200px;
-  margin-top: 5px;
+  grid-template-columns: 100px 1fr 150px;
+  position: relative;
+  align-items: center;
 }
 
 #logo {
   width: 100px;
+  height: 30px;
   display: grid;
   grid-template-areas: "logo";
   align-items: center;
   justify-items: center;
-  position: absolute;
+  position: relative;
   cursor: pointer;
-  top: -35px;
+  overflow: hidden;
 }
 
 #logo .logo-img {
   object-fit: cover;
   grid-area: logo;
+  position: absolute;
+  top:-35px;
 }
 
 #logo:hover .logo-img{
@@ -126,39 +129,59 @@ header {
 }
 
 #menu {
-  grid-column: 2/-2;
-  justify-self: center;
+  grid-column-start: 2;
+  justify-content: center;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 
-#upper-nav ul li {
-  display: inline-block;
+#upper-nav ul li,
+#upper-nav ul li a  {
   color: var(--dwhite);
   font-weight: 600;
   cursor: pointer;
+  justify-self: center;
 }
 
-#upper-nav ul li:hover {
+#upper-nav ul li:hover,
+#upper-nav ul li a:hover  {
   color: #FFF;
 }
 
 #menu-user {
-  justify-self: end;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  justify-items: end;
 }
 
-#upper-nav ul li a {
-  color: var(--dwhite);
+#menu-user > li {
+  margin-left: 10px;
 }
 
-#upper-nav ul li a:hover {
-  color: #FFF;
+#menu-user-panel {
+  display: none;
+  position: absolute;
+  top: 40px;
+  right: 0;
+  background: #FFF;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+#menu-user-panel:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  right: 10px;
+  border-style: solid;
+  border-width: 0 15px 10px 15px;
+  border-color: transparent transparent #FFF transparent;
 }
 
 #lower-nav {
   background: #FFF;
   width: 100vw;
-  height: 200px;
+  min-height: 190px;
   position: fixed;
   top: 30px;
   transform: translateY(-100%);
@@ -173,13 +196,19 @@ header {
   margin-top: 10px;
 }
 
-#lower-nav .container a {
+#lower-nav .container a,
+#upper-nav #menu-user-panel li a {
   color: black;
   text-decoration: none;
 }
 
-#lower-nav .container a:hover {
+#lower-nav .container a:hover,
+#upper-nav #menu-user-panel li a:hover {
   color: var(--red);
+}
+
+#upper-nav #menu-user-panel li a {
+  font-weight: 400;
 }
 
 #lower-nav .close-btn {
@@ -227,3 +256,25 @@ footer {
 #go-top-btn p {
   font-size: 8px;
 }
+
+/* RWD */
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 100%;
+  }
+}
+
+
+@media (min-width: 550px) {
+  .container {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 550px) {
+  .container {
+    width: 100%;
+  }
+}
+
