--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,8 @@
                 <li id="user-center-lbl">會員中心
                   <div id="menu-user-panel" class="shadow-box">
                     <ul>
-                      <li>修改資料</li>
-                      <li><%= link_to '修改密碼', edit_user_password_path %></li>
+                      <li><%= link_to '修改資料', edit_user_path(current_user) %></li>
+                      <li><%= link_to '修改密碼', edit_user_password_path(current_user) %></li>
                       <hr />
                       <li><%= link_to '登出', destroy_user_session_path, method: :delete %></li>
                     </ul>
@@ -37,7 +37,7 @@
                 </li>
                 <li></li>             
               <% else %>
-                <li><%= link_to '會員登入', user_session_path, method: :post %></li>
+                <li><%= link_to '登入', user_session_path, method: :post %></li>
                 <li>註冊</li>
               <% end %>
             </ul>
