--- a/app/views/admin/genders/index.html.erb
+++ b/app/views/admin/genders/index.html.erb
@@ -16,10 +16,10 @@
         <% @genders.each do |gender| %>
           <tr>
             <% gender.attributes.each do |key,value|  %>
-              <td><%= link_to value, admin_gender_categories_path(gender) %></td>
+              <td><%= link_to value, admin_gender_categories_path(gender), class: "admin-a" %></td>
             <% end %>
-            <td><%= link_to "編輯", edit_admin_gender_path(gender) %></td>
-            <td><%= link_to "刪除", admin_gender_path(gender), method: :delete %></td>
+            <td><%= link_to "編輯", edit_admin_gender_path(gender), class: "admin-a"  %></td>
+            <td><%= link_to "刪除", admin_gender_path(gender), class: "admin-a" , method: :delete %></td>
           </tr>
         <% end %>
       </tbody>
