--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -10,7 +10,7 @@
 
 
 .container > .styles-panel .style-item {
-  box-shadow: 1px 1px 0 0 rgba(0,0,0,.1);
+  box-shadow: 0 2px 2px 0 rgba(41,48,59,.24), 0 0 2px 0 rgba(41,48,59,.12);
 }
 
 #order-selection {
