--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,32 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="sign-overlay">
+  <div class="sign-panel">
+    <div class="card">
+      <div class="card-header">
+        <h6>修改帳戶密碼</h6>
+        <div class="close-btn pull-right">&#10005;</div>
+      </div>
+      <div class="card-body">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+          <% if @user.errors.present? %>
+            <span style="color: red" ><%= @user.errors.full_messages.to_sentence %></span>
+          <% end %>   
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+          <% end %>
+            <div class="field form-group">
+              <%= f.password_field :current_password, autocomplete: "off", required: true, placeholder: "請先輸入舊密碼",class: "form-control" %>
+          </div>
+          <div class="field form-group">
+            <%= f.password_field :password, autocomplete: "off", required: true, placeholder: "新密碼（ 至少#{@minimum_password_length}位 ）",class: "form-control" %>
+          </div>
+          <div class="field form-group">
+            <%= f.password_field :password_confirmation, autocomplete: "off", required: true, placeholder: "新密碼確認",class: "form-control" %>
+          </div>
+          <div class="actions">
+               <%= f.submit "修改密碼",class: "btn btn-primary sign-btn" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
